--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		    <h1>Welcome to Our Online Store</h1>
 		        <p>Shop our latest products!</p>
+			<p>Come and visit</p>
 	</body>
 </html>
 
