--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<body>
 		    <h1>Welcome to Our Online Store</h1>
 		        <p>Shop our latest products!</p>
-			<p>Come and visit</p>
+			<p>Flat 20% Offer sale</p>
+
 	</body>
 </html>
 
