--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		        <p>Shop our latest products!</p>
 			<p>Flat 20% Offer sale</p>
 			<h1>Bye..</h1>
+			<p>e-commerece</p>
+
 
 	</body>
 </html>
